--- a/CartoTD1/Exo3/index.html
+++ b/CartoTD1/Exo3/index.html
@@ -8,12 +8,18 @@
     <title>Exo 3</title>
 </head>
 <body>
+    <h1>Orientation du smarphone</h1>
     <div class="container">
-        <p id="alpa"></p>
-        <p id="beta"></p>
-        <p id="gamma"></p>
-        <p id="rotation"></p>
-        <p id="acceleration"></p>
+        <div class="device_orientation">
+            <p id="alpa"></p>
+            <p id="beta"></p>
+            <p id="gamma"></p>
+        </div>
+        <div class="device_motion">
+            <p id="X"></p>
+            <p id="Y"></p>
+            <p id="Z"></p>
+        </div>
     </div>
 </body>
 </html>
