--- a/CartoTD1/Exo2/index.html
+++ b/CartoTD1/Exo2/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./style.css" />
-    <title>Carto TD1</title>
+    <title>Carto TD1 Exo 2</title>
 </head>
 <body>
 
