--- a/CartoTD1/Exo3/index.html
+++ b/CartoTD1/Exo3/index.html
@@ -11,7 +11,7 @@
     <h1>Orientation du smarphone</h1>
     <div class="container">
         <div class="device_orientation">
-            <p id="alpa"></p>
+            <p id="alpha"></p>
             <p id="beta"></p>
             <p id="gamma"></p>
         </div>
