--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <h1>TD1 Carto</h1>
         <div class="list-group">
             <a href="CartoTD1/Exo2/index.html" class="list-group-item list-group-item-action" aria-current="true">Exo 1</a>
+            <a href="CartoTD1/Exo3/index.html" class="list-group-item list-group-item-action" aria-current="true">Exo 2</a>
+           
             <a href="#" class="list-group-item list-group-item-action">A second link item</a>
           </div>
     </div>
