--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <div class="list-group">
             <a href="CartoTD1/Exo2/index.html" class="list-group-item list-group-item-action" aria-current="true">Exo 1</a>
             <a href="CartoTD1/Exo3/index.html" class="list-group-item list-group-item-action" aria-current="true">Exo 2</a>
+            <a href="CartoTD1/Exo4/index.html" class="list-group-item list-group-item-action" aria-current="true">Exo 2</a>
            
             <a href="#" class="list-group-item list-group-item-action">A second link item</a>
           </div>
