--- a/CartoTD1/Exo3/index.html
+++ b/CartoTD1/Exo3/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" src="index.js"></script>
-    <title>Orien 3</title>
+    <title>Exo 3</title>
 </head>
 <body>
-    <h1>Orientation du smarphone</h1>
+    <h1>aeaze du smarphone</h1>
     <div class="container">
         <div class="device_orientation">
             <p id="alpha"></p>
