--- a/CartoTD1/Exo2/index.html
+++ b/CartoTD1/Exo2/index.html
@@ -11,11 +11,11 @@
 
     <div class="td1">
         <h1>Les données avec géolocalisation</h1>
-        <p id="lon"></p>
-        <p id="lat"></p>
-        <p id="preci_mesure"></p>
-        <p id="vitesse"></p>
-        <p id="timestamp"></p>
+        <p>Longitude : <span id="lon"></span></p>
+        <p>Latitude : <span id="lat"></span></p>
+        <p>La précision est de : <span id="preci_mesure"> mètres</span></p>
+        <p>Vitesse : <span id="vitesse"></span></p>
+        <p>Timestamp : <span id="timestamp"></span></p>
     </div>
     <div id="map"></div>
     
