--- a/CartoTD1/Exo3/index.html
+++ b/CartoTD1/Exo3/index.html
@@ -11,14 +11,14 @@
     <h1>aeaze du smarphone</h1>
     <div class="container">
         <div class="device_orientation">
-            <p id="alpha"></p>
-            <p id="beta"></p>
-            <p id="gamma"></p>
+            <p>Alpha : <span id="alpha"></span></p>
+            <p>Beta : <span id="beta"></span></p>
+            <p>Gamma : <span id="gamma"></span></p>
         </div>
         <div class="device_motion">
-            <p id="X"></p>
-            <p id="Y"></p>
-            <p id="Z"></p>
+            <p>X : <span id="X"></span></p>
+            <p>Y : <span id="Y"></span></p>
+            <p>Z : <span id="Z"></span></p>
         </div>
     </div>
 </body>
