--- a/CartoTD1/Exo3/index.html
+++ b/CartoTD1/Exo3/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="text/javascript" src="index.js"></script>
     <title>Exo 3</title>
 </head>
 <body>
-    <h1>aeaze du smarphone</h1>
+    <h1>Orientation du smarphone</h1>
     <div class="container">
         <div class="device_orientation">
             <p>Alpha : <span id="alpha"></span></p>
@@ -21,5 +20,8 @@
             <p>Z : <span id="Z"></span></p>
         </div>
     </div>
+
+    <script type="text/javascript" src="index.js"></script>
+
 </body>
 </html>
