--- a/CartoTD1/Exo4/index.html
+++ b/CartoTD1/Exo4/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TD1 Exo 4</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Touche events avec smartphone</h1>
+        <div class="pos_clicked">
+            <h1>Position cliquée</h1>
+            <p>X : <span id="x"></span></p>
+            <p>Y : <span id="y"></span></p>
+        </div>
+        <div class="type_event_get">
+            <h1>Type d'event reçu</h1>
+            <p>Event : <span id="event"></span></p>
+        </div>
+    </div>
+
+    <script type="text/javascript" src="index.js"></script>
+
 </body>
 </html>
