--- a/CartoTD1/Exo3/index.html
+++ b/CartoTD1/Exo3/index.html
@@ -15,9 +15,12 @@
             <p>Gamma : <span id="gamma"></span></p>
         </div>
         <div class="device_motion">
-            <p>Gravity X : <span id="X"></span></p>
-            <p>Gravity Y : <span id="Y"></span></p>
-            <p>Gravity Z : <span id="Z"></span></p>
+            <p>X : <span id="X"></span></p>
+            <p>Y : <span id="Y"></span></p>
+            <p>Z : <span id="Z"></span></p>
+            <p>Gravity X : <span id="gravityX"></span></p>
+            <p>Gravity Y : <span id="gravityY"></span></p>
+            <p>Gravity Z : <span id="gravityZ"></span></p>
         </div>
     </div>
 
