--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <a href="CartoTD1/Exo2/index.html" class="list-group-item list-group-item-action" aria-current="true">Exo 2</a>
             <a href="CartoTD1/Exo3/index.html" class="list-group-item list-group-item-action" aria-current="true">Exo 3</a>
             <a href="CartoTD1/Exo4/index.html" class="list-group-item list-group-item-action" aria-current="true">Exo 4</a>
+            <a href="CartoTD1/Bonus/index.html" class="list-group-item list-group-item-action" aria-current="true">Bonus TD1</a>
         </div>
     </div>
 </body>
