--- a/CartoTD1/Bonus/index.html
+++ b/CartoTD1/Bonus/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./style.css" />
+    <script src="three.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.plot.ly/plotly-2.8.3.min.js"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js'></script>
@@ -82,15 +83,36 @@
                     </div>
                 </div>
             </div>
+            <div class="cube_orientation" id="cubeOrientation"></div>
         </div>
         <div class="touch_events">
 
         </div>
         <div class="capteur">
-            <canvas class="canvas_capteur" id="canvasCapteur"></canvas>
+            <select class="form-select" id="selectCapteur" aria-label="Default select example" onchange="getSelectValue()">
+                <option selected>Sélectionner un capteur</option>
+                <option value="1">Pédomètre</option>
+                <option value="2">Capteur d'orientation</option>
+                <option value="3">Capteur de proximité</option>
+                <option value="4">Détecteur de luminosité</option>
+            </select>
+            <div class="divC">
+                <canvas class="canvas_capteur" id="canvasCapteur"></canvas>
+            </div>
         </div>
 
-        <div class="map" id="map"></div>
+        <div class="toucheEvents">
+            <h1>Touche events avec smartphone</h1>
+            <div class="pos_clicked">
+                <h1>Position cliquée</h1>
+                <p>X : <span id="eventX"></span></p>
+                <p>Y : <span id="eventY"></span></p>
+            </div>
+            <div class="type_event_get">
+                <h1>Type d'event reçu</h1>
+                <p>Event : <span id="event"></span></p>
+            </div>
+        </div>
 
     </div>
 
