--- a/CartoTD1/Exo3/index.html
+++ b/CartoTD1/Exo3/index.html
@@ -10,11 +10,13 @@
     <h1>Orientation du smarphone</h1>
     <div class="container">
         <div class="device_orientation">
+            <h2>Orientation</h2>
             <p>Alpha : <span id="alpha"></span></p>
             <p>Beta : <span id="beta"></span></p>
             <p>Gamma : <span id="gamma"></span></p>
         </div>
         <div class="device_motion">
+            <h2>Motion</h2>
             <p>X : <span id="X"></span></p>
             <p>Y : <span id="Y"></span></p>
             <p>Z : <span id="Z"></span></p>
