--- a/index.html
+++ b/index.html
@@ -14,12 +14,23 @@
     <h1>Bonjour</h1>
     <h2>Créateur Jonathan</h2>
     <div class="container">
-        <h1>TD1 Carto</h1>
-        <div class="list-group">
-            <a href="CartoTD1/Exo2/index.html" class="list-group-item list-group-item-action" aria-current="true">Exo 2</a>
-            <a href="CartoTD1/Exo3/index.html" class="list-group-item list-group-item-action" aria-current="true">Exo 3</a>
-            <a href="CartoTD1/Exo4/index.html" class="list-group-item list-group-item-action" aria-current="true">Exo 4</a>
-            <a href="CartoTD1/Bonus/index.html" class="list-group-item list-group-item-action" aria-current="true">Exo 4 Bonus</a>
+        <div class="td1">
+            <h1>TD1 Carto</h1>
+            <div class="list-group">
+                <a href="CartoTD1/Exo2/index.html" class="list-group-item list-group-item-action" aria-current="true">Exo 2</a>
+                <a href="CartoTD1/Exo3/index.html" class="list-group-item list-group-item-action" aria-current="true">Exo 3</a>
+                <a href="CartoTD1/Exo4/index.html" class="list-group-item list-group-item-action" aria-current="true">Exo 4</a>
+                <a href="CartoTD1/Bonus/index.html" class="list-group-item list-group-item-action" aria-current="true">Exo 4 Bonus</a>
+            </div>
+        </div>
+        <div class="td2">
+            <h1>TD2 Carto</h1>
+            <div class="list-group">
+                <a href="CartoTD2/Exo1/index.html" class="list-group-item list-group-item-action" aria-current="true">Exo 1</a>
+                <a href="CartoTD2/Exo2/index.html" class="list-group-item list-group-item-action" aria-current="true">Exo 2</a>
+                <a href="CartoTD2/Exo3/index.html" class="list-group-item list-group-item-action" aria-current="true">Exo 3</a>
+                <a href="CartoTD2/Bonus/index.html" class="list-group-item list-group-item-action" aria-current="true">Bonus</a>
+            </div>
         </div>
     </div>
 </body>
