--- a/CartoTD2/Bonus/index.html
+++ b/CartoTD2/Bonus/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
+    <script src="signca-ec-voies-velo.geojson" type="text/javascript"></script>
+    <link rel="stylesheet" href="style.css">
     <title>Bonus TD2</title>
 </head>
 <body>
-    
+    <h1>Bonus Route !</h1>
+    <div id="map"></div>
+    <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
