--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
                 <a href="CartoTD2/Bonus/index.html" class="list-group-item list-group-item-action" aria-current="true">Bonus</a>
             </div>
         </div>
+        <div class="td3">
+            <h1>TD3 Carto</h1>
+            <div class="list-group">
+                <a href="CartoTD3/Exo1/index.html" class="list-group-item list-group-item-action" aria-current="true">Exo 1</a>
+                <a href="CartoTD3/Exo2/index.html" class="list-group-item list-group-item-action" aria-current="true">Exo 2</a>
+            </div>
+        </div>
     </div>
 </body>
 </html>
