Etape for object 3d download

--- a/CartoTD3/Exo2/index.html
+++ b/CartoTD3/Exo2/index.html
@@ -1,6 +1,12 @@
 <!--
 
     Object 3D Download : https://github.com/KhronosGroup/glTF-Sample-Viewer
+    Etapes : 
+        Make sure Git LFS is installed.
+        git submodule update --init --recursive
+        cd Objet3Download\glTF-Sample-Viewer\app_web
+        npm install
+        npm run dev
 
 -->
 <!DOCTYPE html>
