--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
                 <a href="CartoTD3/Exo2/index.html" class="list-group-item list-group-item-action" aria-current="true">Exo 2</a>
             </div>
         </div>
+        <div class="td3">
+            <h1>TD4 Carto</h1>
+            <div class="list-group">
+                <a href="CartoTD4/Exo/index.html" class="list-group-item list-group-item-action" aria-current="true">Exo Geolocalisation sur terre</a>
+            </div>
+        </div>
     </div>
 </body>
 </html>
