--- a/CartoTD3/Exo2/index.html
+++ b/CartoTD3/Exo2/index.html
@@ -19,7 +19,9 @@
     <title>Exercice 2</title>
 </head>
 <body>
-    <script src="three.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.122.0/build/three.min.js"></script>   
+    <script src="https://cdn.jsdelivr.net/npm/three@0.122.0/examples/js/loaders/GLTFLoader.min.js"></script>
+
     <script src="index.js"></script>
 </body>
 </html>
